--- a/index.html
+++ b/index.html
@@ -12,3 +12,16 @@
 <!-- git clone  url -->
 
 <!-- git add . -->
+
+<!-- git commit -m "comments" -->
+
+<!-- who are you -->
+
+<!-- git config --global user.name "FIRST_NAME LAST_NAME" -->
+
+<!-- git config --global user.email "MY_NAME@example.com" -->
+
+<!-- authentication -->
+
+<!-- git push origin main -->
+
